--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <nav class="navbar">
         <div class="container nav-content">
             <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
-            
-            <div class="menu-toggle" onclick="toggleMenu()">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-
+            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
             <div class="nav-links" id="navMenu">
                 <a href="index.html" class="active">Home</a>
                 <a href="#about">About</a>
@@ -28,7 +21,6 @@
             </div>
         </div>
     </nav>
-
     <header class="hero">
         <div class="hero-overlay"></div>
         <div class="container hero-content">
@@ -40,266 +32,65 @@
             </div>
         </div>
     </header>
-
     <div class="container">
         <div class="action-bar">
-            <a href="#contact" class="action-item">
-                <span class="icon">📅</span>
-                <span>Book Service</span>
-            </a>
-            <a href="#contact" class="action-item">
-                <span class="icon">🏍️</span>
-                <span>Test Ride</span>
-            </a>
-            <a href="https://wa.me/919964946512?text=General%20Enquiry" class="action-item">
-                <span class="icon">💬</span>
-                <span>WhatsApp Us</span>
-            </a>
-            <a href="tel:+919964946512" class="action-item">
-                <span class="icon">📞</span>
-                <span>Call Now</span>
-            </a>
+            <a href="#contact" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
+            <a href="#contact" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
+            <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp Us</span></a>
+            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
-
     <section id="about" class="section-padding">
         <div class="container">
-            <div class="section-header">
-                <h2>Welcome to Tirumala TVS</h2>
-                <p>Committed to excellence, innovation, and customer satisfaction.</p>
-            </div>
+            <div class="section-header text-center"><h2>Welcome to Tirumala TVS</h2><p>Committed to excellence and customer satisfaction.</p></div>
             <div class="stats-grid">
-                <div class="stat-card">
-                    <h3>50M+</h3>
-                    <p>Happy Customers</p>
-                </div>
-                <div class="stat-card">
-                    <h3>80+</h3>
-                    <p>Countries Served</p>
-                </div>
-                <div class="stat-card">
-                    <h3>#1</h3>
-                    <p>JD Power Award</p>
-                </div>
+                <div class="stat-card"><h3>50M+</h3><p>Happy Customers</p></div>
+                <div class="stat-card"><h3>80+</h3><p>Countries Served</p></div>
+                <div class="stat-card"><h3>#1</h3><p>JD Power Award</p></div>
             </div>
         </div>
     </section>
-
     <section class="section-padding bg-light">
         <div class="container">
-            <div class="section-header">
-                <h2>Latest Launches</h2>
-                <p>Explore the newest additions to the TVS family.</p>
-            </div>
+            <div class="section-header text-center"><h2>Latest Launches</h2></div>
             <div class="grid-3">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
-                        <span class="badge">New</span>
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Jupiter 110</h3>
-                        <p>Zyada ka Fayada with iGO Assist technology.</p>
-                        <a href="models.html" class="btn-link">View Details &rarr;</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
-                        <span class="badge">Trending</span>
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Raider 125</h3>
-                        <p>The wicked ride. Commuter of the year.</p>
-                        <a href="models.html" class="btn-link">View Details &rarr;</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Ronin</h3>
-                        <p>Modern-Retro Scrambler for the unscripted.</p>
-                        <a href="models.html" class="btn-link">View Details &rarr;</a>
-                    </div>
-                </div>
-            </div>
-            <div class="center-btn">
-                <a href="models.html" class="btn btn-secondary">View All Vehicles</a>
+                <div class="card"><div class="card-image"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400'"><span class="badge">New</span></div><div class="card-body"><h3>TVS Jupiter 110</h3><p>Zyada ka Fayada with iGO Assist.</p><a href="models.html" style="color:red">View Details &rarr;</a></div></div>
+                <div class="card"><div class="card-image"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400'"><span class="badge">Trending</span></div><div class="card-body"><h3>TVS Raider 125</h3><p>The wicked ride. Commuter of the year.</p><a href="models.html" style="color:red">View Details &rarr;</a></div></div>
+                <div class="card"><div class="card-image"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400'"></div><div class="card-body"><h3>TVS Ronin</h3><p>Modern-Retro Scrambler.</p><a href="models.html" style="color:red">View Details &rarr;</a></div></div>
             </div>
         </div>
     </section>
-
     <section id="services" class="section-padding">
         <div class="container">
-            <div class="section-header">
-                <h2>Our Services</h2>
-                <p>Professional care to keep your vehicle running like new.</p>
-            </div>
-            <div class="grid-3 service-grid">
-                <div class="service-box">
-                    <div class="service-icon">🛠️</div>
-                    <h3>General Service</h3>
-                    <p>Complete checkup and maintenance by certified technicians.</p>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">🛢️</div>
-                    <h3>Oil Change</h3>
-                    <p>Genuine TVS Tru4 oil for better engine life and mileage.</p>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">⚙️</div>
-                    <h3>Engine Diagnostics</h3>
-                    <p>Advanced computer diagnostics to identify hidden issues.</p>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">🔋</div>
-                    <h3>Battery Check</h3>
-                    <p>Health check and replacement of batteries.</p>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">🛑</div>
-                    <h3>Brake Service</h3>
-                    <p>Brake pad replacement and safety inspections.</p>
-                </div>
-                <div class="service-box">
-                    <div class="service-icon">🧼</div>
-                    <h3>Foam Wash</h3>
-                    <p>Premium pressure wash and polishing services.</p>
-                </div>
-            </div>
-            <div class="center-btn" style="margin-top: 30px;">
-                <a href="https://wa.me/919964946512?text=Book%20Service" class="btn btn-whatsapp">Book Service Appointment</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-padding bg-light">
-        <div class="container">
-            <div class="section-header">
-                <h2>Happy Riders</h2>
-                <p>What our customers say about Tirumala TVS.</p>
-            </div>
+            <div class="section-header text-center"><h2>Our Services</h2></div>
             <div class="grid-3">
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Excellent service! The staff was very polite and the delivery was on time. Highly recommend Tirumala TVS."</p>
-                    <h4>- Rahul Sharma</h4>
-                </div>
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Bought my new Raider from here. The finance process was smooth and quick. Great experience."</p>
-                    <h4>- Priya Gowda</h4>
-                </div>
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Best service center in Bidarahalli. They resolved my engine issue which other mechanics couldn't fix."</p>
-                    <h4>- Karthik N.</h4>
-                </div>
+                <div class="service-box"><div class="service-icon">🛠️</div><h3>General Service</h3><p>Complete checkup by certified technicians.</p></div>
+                <div class="service-box"><div class="service-icon">🛢️</div><h3>Oil Change</h3><p>Genuine TVS Tru4 oil for better life.</p></div>
+                <div class="service-box"><div class="service-icon">⚙️</div><h3>Diagnostics</h3><p>Advanced computer diagnostics.</p></div>
             </div>
+            <div class="center-btn text-center" style="margin-top:30px;"><a href="https://wa.me/919964946512?text=Book%20Service" class="btn btn-whatsapp">Book Service Appointment</a></div>
         </div>
     </section>
-
     <section id="contact" class="section-padding">
         <div class="container">
             <div class="contact-layout">
                 <div class="contact-form-wrapper">
                     <h2>Get In Touch</h2>
-                    <p>Fill the form below and we will contact you shortly.</p>
-                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="contact-form">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" name="name" required placeholder="Your Name">
-                        </div>
-                        <div class="form-group">
-                            <label>Phone Number</label>
-                            <input type="tel" name="phone" required placeholder="Your Phone">
-                        </div>
-                        <div class="form-group">
-                            <label>Interested In</label>
-                            <select name="purpose">
-                                <option>New Vehicle Enquiry</option>
-                                <option>Book Service</option>
-                                <option>Insurance / Finance</option>
-                                <option>Other</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Message</label>
-                            <textarea name="message" rows="4" placeholder="How can we help?"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary full-width">Submit Request</button>
+                    <form action="https://formspree.io/f/YOUR_ID" method="POST">
+                        <div class="form-group"><label>Name</label><input type="text" name="name" required></div>
+                        <div class="form-group"><label>Phone</label><input type="tel" name="phone" required></div>
+                        <div class="form-group"><label>Purpose</label><select name="purpose"><option>New Vehicle</option><option>Service</option></select></div>
+                        <button type="submit" class="btn btn-primary full-width">Submit</button>
                     </form>
                 </div>
                 <div class="contact-info-wrapper">
-                    <h3>Contact Info</h3>
-                    <div class="info-item">
-                        <span>📍</span>
-                        <p><strong>Tirumala TVS Bidarahalli</strong><br>Main Road, Bidarahalli, Bangalore - 560049</p>
-                    </div>
-                    <div class="info-item">
-                        <span>📞</span>
-                        <p>+91 99649 46512</p>
-                    </div>
-                    <div class="info-item">
-                        <span>✉️</span>
-                        <p>tirumalatvs716@gmail.com</p>
-                    </div>
-                    <div class="map-placeholder">
-                        <p>Map Loading...</p>
-                    </div>
+                    <h3>Tirumala TVS Bidarahalli</h3><p>Main Road, Bidarahalli, Bangalore - 560049</p><br><p>📞 +91 99649 46512</p>
                 </div>
             </div>
         </div>
     </section>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <h3>Tirumala <span>TVS</span></h3>
-                    <p>Your authorized main dealer for sales, service, and spares.</p>
-                </div>
-                <div class="footer-col">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="models.html">All Vehicles</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Vehicle Types</h4>
-                    <ul>
-                        <li><a href="models.html#motorcycles">Motorcycles</a></li>
-                        <li><a href="models.html#scooters">Scooters</a></li>
-                        <li><a href="models.html#electric">Electric (iQube)</a></li>
-                        <li><a href="models.html#mopeds">Mopeds (XL100)</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Working Hours</h4>
-                    <ul>
-                        <li>Mon - Sat: 9:00 AM - 8:00 PM</li>
-                        <li>Sunday: 9:00 AM - 2:00 PM</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Tirumala TVS Bidarahalli. All Rights Reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <a href="https://wa.me/919964946512?text=Hi%20Tirumala%20TVS" class="whatsapp-float" target="_blank">💬</a>
-
-    <script>
-        function toggleMenu() {
-            const navMenu = document.getElementById('navMenu');
-            navMenu.classList.toggle('active');
-        }
-    </script>
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS Bidarahalli.</p></div></footer>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <script>function toggleMenu(){document.getElementById('navMenu').classList.toggle('active');}</script>
 </body>
 </html>
