--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
         <div class="container">
             
             <div class="header-top">
-                <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+                <div class="logo-area">
+                    <a href="index.html" class="logo">Tirumala <span>TVS</span></a>
+                </div>
                 
                 <div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
-                <div class="header-btn-group">
-                    <a href="#contact" class="header-btn">Book Service Appointment</a>
-                    <a href="#contact" class="header-btn">Get Quotation</a>
-                    <a href="#contact" class="header-btn">Book Test Drive</a>
+                <div class="header-actions">
+                    <a href="#contact" class="btn-header">Book Service Appointment</a>
+                    <a href="#contact" class="btn-header">Get Quotation</a>
+                    <a href="#contact" class="btn-header">Book Test Drive</a>
                 </div>
             </div>
 
-            <nav class="header-bottom" id="navMenu">
+            <nav class="header-nav" id="navMenu">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="index.html" style="color: var(--primary);">HOME <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="index.html" style="color: #1a3b8c;">HOME <span class="arrow-icon">↗</span></a></li>
                     <li class="nav-item"><a href="#about">ABOUT</a></li>
                     <li class="nav-item"><a href="models.html#motorcycles">MOTORCYCLES</a></li>
                     <li class="nav-item"><a href="models.html#scooters">SCOOTERS</a></li>
@@ -53,16 +55,16 @@
 
     <div class="container">
         <div class="action-bar">
-            <a href="#contact" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
-            <a href="#contact" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
-            <a href="https://wa.me/919964946512?text=General%20Enquiry" class="action-item"><span class="icon">💬</span><span>WhatsApp Us</span></a>
-            <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
+            <a href="#contact" class="action-item"><span style="font-size: 2rem;">📅</span><span>Book Service</span></a>
+            <a href="#contact" class="action-item"><span style="font-size: 2rem;">🏍️</span><span>Test Ride</span></a>
+            <a href="https://wa.me/919964946512?text=General%20Enquiry" class="action-item"><span style="font-size: 2rem;">💬</span><span>WhatsApp Us</span></a>
+            <a href="tel:+919964946512" class="action-item"><span style="font-size: 2rem;">📞</span><span>Call Now</span></a>
         </div>
     </div>
 
-    <section id="about" class="section-padding" style="background: #fff; margin-top: -30px;">
+    <section id="about" class="section-padding">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header text-center">
                 <h2>Welcome to Tirumala TVS</h2>
                 <p>Committed to excellence, innovation, and customer satisfaction.</p>
             </div>
@@ -76,42 +78,21 @@
 
     <section class="section-padding bg-light">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header text-center">
                 <h2>Latest Launches</h2>
-                <p>Explore the newest additions to the TVS family.</p>
             </div>
             <div class="grid-3">
                 <div class="card">
-                    <div class="card-image">
-                        <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
-                        <span class="badge">New</span>
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Jupiter 110</h3>
-                        <p>Zyada ka Fayada with iGO Assist technology.</p>
-                        <a href="models/jupiter113.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a>
-                    </div>
+                    <div class="card-image"><img src="assets/jupiter110.jpg" alt="Jupiter" onerror="this.src='https://placehold.co/600x400?text=Jupiter'"><span class="badge">New</span></div>
+                    <div class="card-body"><h3>TVS Jupiter 110</h3><p>Zyada ka Fayada with iGO Assist.</p><a href="models/jupiter113.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a></div>
                 </div>
                 <div class="card">
-                    <div class="card-image">
-                        <img src="assets/raider.jpg" alt="Raider 125" onerror="this.src='https://placehold.co/600x400?text=Raider'">
-                        <span class="badge">Trending</span>
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Raider 125</h3>
-                        <p>The wicked ride. Commuter of the year.</p>
-                        <a href="models/raider.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a>
-                    </div>
+                    <div class="card-image"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'"><span class="badge">Trending</span></div>
+                    <div class="card-body"><h3>TVS Raider 125</h3><p>The wicked ride. Commuter of the year.</p><a href="models/raider.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a></div>
                 </div>
                 <div class="card">
-                    <div class="card-image">
-                        <img src="assets/ronin.jpg" alt="TVS Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-                    </div>
-                    <div class="card-body">
-                        <h3>TVS Ronin</h3>
-                        <p>Modern-Retro Scrambler for the unscripted.</p>
-                        <a href="models/ronin.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a>
-                    </div>
+                    <div class="card-image"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
+                    <div class="card-body"><h3>TVS Ronin</h3><p>Modern-Retro Scrambler.</p><a href="models/ronin.html" style="color: var(--accent); font-weight: bold;">View Details &rarr;</a></div>
                 </div>
             </div>
         </div>
@@ -119,43 +100,14 @@
 
     <section id="services" class="section-padding">
         <div class="container">
-            <div class="section-header">
-                <h2>Our Services</h2>
-                <p>Professional care to keep your TVS running like new.</p>
-            </div>
+            <div class="section-header text-center"><h2>Our Services</h2></div>
             <div class="grid-3">
                 <div class="service-box"><div class="service-icon">🛠️</div><h3>General Service</h3><p>Complete checkup by certified technicians.</p></div>
-                <div class="service-box"><div class="service-icon">🛢️</div><h3>Oil Change</h3><p>Genuine Tru4 oil to improve life and mileage.</p></div>
-                <div class="service-box"><div class="service-icon">⚙️</div><h3>Diagnostics</h3><p>Ensure peak performance with computer diagnostics.</p></div>
+                <div class="service-box"><div class="service-icon">🛢️</div><h3>Oil Change</h3><p>Genuine TVS Tru4 oil for better life.</p></div>
+                <div class="service-box"><div class="service-icon">⚙️</div><h3>Diagnostics</h3><p>Advanced computer diagnostics.</p></div>
             </div>
             <div class="text-center" style="margin-top: 30px;">
-                <a href="https://wa.me/919964946512?text=I%20want%20to%20book%20a%20service" class="btn btn-whatsapp">Book Service Appointment</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-padding bg-light">
-        <div class="container">
-            <div class="section-header">
-                <h2>Happy Riders</h2>
-                <p>What our customers say about Tirumala TVS.</p>
-            </div>
-            <div class="grid-3">
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Excellent service! Polite staff and on-time delivery. Highly recommend Tirumala TVS."</p>
-                    <h4>- Usama Faruqui, Jupiter Owner</h4>
-                </div>
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Bought my new Raider here. The finance process was smooth and quick. Great experience."</p>
-                    <h4>- Safik Ahmed, Raider Owner</h4>
-                </div>
-                <div class="testimonial">
-                    <div class="stars">★★★★★</div>
-                    <p>"Best service center in Bidarahalli. Knowledgable mechanics and genuine parts."</p>
-                    <h4>- Vikram M., Apache Owner</h4>
-                </div>
+                <a href="https://wa.me/919964946512" class="btn btn-whatsapp">Book Service Appointment</a>
             </div>
         </div>
     </section>
@@ -165,59 +117,37 @@
             <div class="contact-layout">
                 <div class="contact-form-wrapper">
                     <h2>Get In Touch</h2>
-                    <p>Fill the form below and we will contact you shortly.</p>
-                    <form action="https://formspree.io/f/YOUR_ID" method="POST" style="margin-top: 20px;">
-                        <div class="form-group"><label>Name</label><input type="text" name="name" required placeholder="Enter Name"></div>
-                        <div class="form-group"><label>Phone</label><input type="tel" name="phone" required placeholder="Enter Phone"></div>
-                        <div class="form-group">
-                            <label>Purpose</label>
-                            <select name="purpose">
-                                <option>New Vehicle Enquiry</option>
-                                <option>Book Service</option>
-                                <option>Test Drive</option>
-                                <option>Quotation</option>
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary full-width">Submit Request</button>
+                    <form action="https://formspree.io/f/YOUR_ID" method="POST">
+                        <div class="form-group"><label>Name</label><input type="text" name="name" required></div>
+                        <div class="form-group"><label>Phone</label><input type="tel" name="phone" required></div>
+                        <div class="form-group"><label>Purpose</label><select name="purpose"><option>New Vehicle</option><option>Service</option></select></div>
+                        <button type="submit" class="btn btn-primary full-width">Submit</button>
                     </form>
                 </div>
                 <div class="contact-info-wrapper" style="padding-top: 20px;">
-                    <h3>Tirumala TVS Bidarahalli</h3>
-                    <p>Main Road, Bidarahalli, Bangalore - 560049</p>
-                    <br>
-                    <p>📞 +91 99649 46512</p>
-                    <p>✉️ tirumalatvs716@gmail.com</p>
+                    <h3>Tirumala TVS Bidarahalli</h3><p>Main Road, Bidarahalli, Bangalore - 560049</p><br><p>📞 +91 99649 46512</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="container text-center">
-            <p style="color: #888; font-size: 0.9rem;">&copy; 2025 Tirumala TVS Bidarahalli.</p>
-        </div>
-    </footer>
-
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 
     <script>
-        // Simple function to toggle the mobile menu
         function toggleMenu() {
-            var menu = document.getElementById("navMenu");
-            if (menu.style.display === "block") {
-                menu.style.display = "none";
+            var nav = document.getElementById("navMenu");
+            if (nav.style.display === "block") {
+                nav.style.display = "none";
             } else {
-                menu.style.display = "block";
-                // Set some mobile-specific styles directly via JS for simplicity
-                var list = menu.querySelector('.nav-list');
+                nav.style.display = "block";
+                var list = nav.querySelector('.nav-list');
                 list.style.flexDirection = "column";
                 list.style.background = "#fff";
                 list.style.padding = "20px";
-                list.style.boxShadow = "0 5px 10px rgba(0,0,0,0.1)";
                 list.style.position = "absolute";
                 list.style.width = "100%";
                 list.style.left = "0";
-                list.style.top = "60px"; /* Below header */
             }
         }
     </script>
